--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-fontawesome": "^1.7.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "theme-ui": "^0.16.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
