--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "react": "^18.2.0",
+    "react-alice-carousel": "^2.9.1",
     "react-dom": "^18.3.1",
     "react-fontawesome": "^1.7.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
+    "react-sliding-pane": "^7.3.0",
     "theme-ui": "^0.16.2",
     "web-vitals": "^2.1.4"
   },
