--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
     "react-sliding-pane": "^7.3.0",
+    "semantic-ui-react": "^2.1.5",
     "slick-carousel": "^1.8.1",
     "theme-ui": "^0.16.2",
     "web-vitals": "^2.1.4"
